--- a/src/core/env/.env.production
+++ b/src/core/env/.env.production
@@ -1,5 +1,5 @@
 APP_NAME=Python Template API
-ENVIRONMENT=development
+ENVIRONMENT=production
 DEBUG=True
 SECRET_KEY=dev-super-secret
 ISSUER=python.template.api
