feat(python.template.api) create user Redis Pub/Sub

--- a/src/core/env/.env.development
+++ b/src/core/env/.env.development
@@ -1,6 +1,13 @@
 APP_NAME=Python Template API
 ENVIRONMENT=development
 DEBUG=True
+
 SECRET_KEY=dev-super-secret
 ISSUER=python.template.api
 AUDIENCE=public-api
+
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=Poc2Minimal@Api
