--- a/src/core/env/.env.homolog
+++ b/src/core/env/.env.homolog
@@ -1,6 +1,12 @@
 APP_NAME=Python Template API
-ENVIRONMENT=homolog
+ENVIRONMENT=development
 DEBUG=True
+
 SECRET_KEY=dev-super-secret
 ISSUER=python.template.api
 AUDIENCE=public-api
+
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
