feat(python.template.api) create user RabbitMQ Pub/Sub

--- a/src/core/env/.env.development
+++ b/src/core/env/.env.development
@@ -11,3 +11,21 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD=Poc2Minimal@Api
+
+
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+
+# User
+RABBITMQ_EXCHANGE=user-exchange
+RABBITMQ_QUEUE=user-created-queue
+
+RABBITMQ_EXCHANGE_USER=user-exchange
+RABBITMQ_QUEUE_USER=user-created-queue
+
+
+# Person
+RABBITMQ_EXCHANGE_PERSON=person-exchange
+RABBITMQ_QUEUE_PERSON=person-created-queue
