feat(python.template.api) create user RabbitMQ Pub/Sub

--- a/src/core/env/.env.development
+++ b/src/core/env/.env.development
@@ -2,9 +2,9 @@ APP_NAME=Python Template API
 ENVIRONMENT=development
 DEBUG=True
 
-SECRET_KEY=dev-super-secret
-ISSUER=python.template.api
-AUDIENCE=public-api
+SECRET_KEY=cHJqc2xuYmFjay1ndWlsaGVybWVtYXVyaWxh
+ISSUER=JwtApiAuth
+AUDIENCE=JwtApiAuth
 
 
 REDIS_HOST=localhost
