--- a/src/core/env/.env.production
+++ b/src/core/env/.env.production
@@ -2,11 +2,30 @@ APP_NAME=Python Template API
 ENVIRONMENT=development
 DEBUG=True
 
-SECRET_KEY=dev-super-secret
-ISSUER=python.template.api
-AUDIENCE=public-api
+SECRET_KEY=cHJqc2xuYmFjay1ndWlsaGVybWVtYXVyaWxh
+ISSUER=JwtApiAuth
+AUDIENCE=JwtApiAuth
 
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
+REDIS_PASSWORD=Poc2Minimal@Api
+
+
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+
+# User
+RABBITMQ_EXCHANGE=user-exchange
+RABBITMQ_QUEUE=user-created-queue
+
+RABBITMQ_EXCHANGE_USER=user-exchange
+RABBITMQ_QUEUE_USER=user-created-queue
+
+
+# Person
+RABBITMQ_EXCHANGE_PERSON=person-exchange
+RABBITMQ_QUEUE_PERSON=person-created-queue
