--- a/src/core/env/.env.docker
+++ b/src/core/env/.env.docker
@@ -29,3 +29,7 @@ RABBITMQ_QUEUE_USER=user-created-queue
 # Person
 RABBITMQ_EXCHANGE_PERSON=person-exchange
 RABBITMQ_QUEUE_PERSON=person-created-queue
+
+KAFKA_BOOTSTRAP_SERVERS=localhost:29092
+KAFKA_TOPIC=user-topic
+KAFKA_GROUP_ID=user-group
