feat(python.template.api) create user Kafka Pub/Sub

--- a/src/core/env/.env.docker
+++ b/src/core/env/.env.docker
@@ -1,35 +1,26 @@
-APP_NAME=Python Template API
-ENVIRONMENT=development
-DEBUG=True
-
-SECRET_KEY=cHJqc2xuYmFjay1ndWlsaGVybWVtYXVyaWxh
-ISSUER=JwtApiAuth
-AUDIENCE=JwtApiAuth
-
-
-REDIS_HOST=localhost
+# REDIS
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD=Poc2Minimal@Api
 
-
-RABBITMQ_HOST=localhost
+# RABBITMQ
+RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_USER=guest
 RABBITMQ_PASSWORD=guest
-
-# User
 RABBITMQ_EXCHANGE=user-exchange
 RABBITMQ_QUEUE=user-created-queue
 
-RABBITMQ_EXCHANGE_USER=user-exchange
-RABBITMQ_QUEUE_USER=user-created-queue
-
-
-# Person
-RABBITMQ_EXCHANGE_PERSON=person-exchange
-RABBITMQ_QUEUE_PERSON=person-created-queue
-
-KAFKA_BOOTSTRAP_SERVERS=localhost:29092
+# KAFKA
+KAFKA_BOOTSTRAP_SERVERS=kafka1:9092
 KAFKA_TOPIC=user-topic
 KAFKA_GROUP_ID=user-group
+
+# GERAL
+APP_NAME=python-template
+ENVIRONMENT=docker
+DEBUG=true
+SECRET_KEY=segredo
+ISSUER=python-template
+AUDIENCE=public
