--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
+# fastapi==0.115.14
+# uvicorn==0.35.0
+# pydantic==2.11.7
+# pydantic_core==2.33.2
+# python-dotenv==1.1.1
+# python-dotenv
+# python-jose
+# passlib[bcrypt]
+# redis==5.0.3
+# pydantic-settings==2.1.0
+# python-dotenv==1.0.1
+# pika==1.3.2
+# kafka-python
+
 fastapi==0.115.14
 uvicorn==0.35.0
 pydantic==2.11.7
 pydantic_core==2.33.2
-python-dotenv==1.1.1
-python-dotenv
+python-dotenv==1.0.1
 python-jose
 passlib[bcrypt]
 redis==5.0.3
 pydantic-settings==2.1.0
-python-dotenv==1.0.1
 pika==1.3.2
 kafka-python
