feat(python.template.api) Database, Migration e tabelas relacionada ao usuario

--- a/src/core/env/.env.development
+++ b/src/core/env/.env.development
@@ -33,3 +33,12 @@ RABBITMQ_QUEUE_PERSON=person-created-queue
 KAFKA_BOOTSTRAP_SERVERS=localhost:29092
 KAFKA_TOPIC=user-topic
 KAFKA_GROUP_ID=user-group
+
+
+
+
+SQLSERVER_HOST=localhost
+SQLSERVER_PORT=1433
+SQLSERVER_DB=api.python.db
+SQLSERVER_USER=sa
+SQLSERVER_PASSWORD=@Poc2Minimal@Api
