--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,3 @@
-# fastapi==0.115.14
-# uvicorn==0.35.0
-# pydantic==2.11.7
-# pydantic_core==2.33.2
-# python-dotenv==1.1.1
-# python-dotenv
-# python-jose
-# passlib[bcrypt]
-# redis==5.0.3
-# pydantic-settings==2.1.0
-# python-dotenv==1.0.1
-# pika==1.3.2
-# kafka-python
-
 fastapi==0.115.14
 uvicorn==0.35.0
 pydantic==2.11.7
@@ -23,3 +9,13 @@ redis==5.0.3
 pydantic-settings==2.1.0
 pika==1.3.2
 kafka-python
+sqlalchemy # pip install sqlalchemy
+pyodbc
+python-dotenv
+alembic
+
+
+# pip install -r requirements.txt
+# pip show sqlalchemy
+# pip install alembic
+
