feat(python.template.api) Database, Migration e tabelas relacionada ao usuario

--- a/src/core/env/.env.docker
+++ b/src/core/env/.env.docker
@@ -24,3 +24,10 @@ DEBUG=true
 SECRET_KEY=segredo
 ISSUER=python-template
 AUDIENCE=public
+
+
+SQLSERVER_HOST=localhost
+SQLSERVER_PORT=1433
+SQLSERVER_DB=api.python.db
+SQLSERVER_USER=sa
+SQLSERVER_PASSWORD=@Poc2Minimal@Api
