--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,28 @@
-fastapi==0.115.14
-uvicorn==0.35.0
-pydantic==2.11.7
-pydantic_core==2.33.2
-python-dotenv==1.0.1
-python-jose
-passlib[bcrypt]
-redis==5.0.3
-pydantic-settings==2.1.0
+annotated-types==0.7.0
+anyio==4.9.0
+async-timeout==5.0.1
+asyncpg==0.30.0
+click==8.2.1
+colorama==0.4.6
+dnspython==2.7.0
+email_validator==2.2.0
+fastapi==0.116.1
+greenlet==3.2.3
+h11==0.16.0
+idna==3.10
+kafka-python==2.2.15
 pika==1.3.2
-kafka-python
-sqlalchemy # pip install sqlalchemy
-pyodbc
-python-dotenv
-alembic
-
-
-# pip install -r requirements.txt
-# pip show sqlalchemy
-# pip install alembic
-
+psycopg2==2.9.10
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+PyMySQL==1.1.1
+pyodbc==5.2.0
+python-dotenv==1.1.1
+redis==6.2.0
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+starlette==0.47.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+uvicorn==0.35.0
