--- a/src/core/env/.env.development
+++ b/src/core/env/.env.development
@@ -36,11 +36,12 @@ KAFKA_BOOTSTRAP_SERVERS=localhost:29092
 KAFKA_TOPIC=user-topic
 KAFKA_GROUP_ID=user-group
 
-
-
-
 SQLSERVER_HOST=localhost
 SQLSERVER_PORT=1433
 SQLSERVER_DB=api.python.db
 SQLSERVER_USER=sa
 SQLSERVER_PASSWORD=@Poc2Minimal@Api
+
+MONGO_LOG_CONN=mongodb://localhost:27017
+MONGO_LOG_DB=core_dev
+MONGO_LOG_COLLECTION=core_dev_logs
