feat(python.template.api) exemplo de consumo de api usando github

--- a/src/core/env/.env.development
+++ b/src/core/env/.env.development
@@ -45,3 +45,10 @@ SQLSERVER_PASSWORD=@Poc2Minimal@Api
 MONGO_LOG_CONN=mongodb://localhost:27017
 MONGO_LOG_DB=core_dev
 MONGO_LOG_COLLECTION=core_dev_logs
+
+
+GITHUB_USERNAME=gfmaurila
+GITHUB_API_URL=https://api.github.com
+GITHUB_TOKEN= # opcional, se quiser usar autenticação
+
+
