--- a/src/core/env/.env.production
+++ b/src/core/env/.env.production
@@ -10,6 +10,9 @@ AUDIENCE=JwtApiAuth
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
+REDIS_DB_USER=1
+REDIS_DB_USER_DELETE=2
+REDIS_DB_AUTH=4
 REDIS_PASSWORD=Poc2Minimal@Api
 
 
@@ -34,10 +37,19 @@ KAFKA_BOOTSTRAP_SERVERS=localhost:29092
 KAFKA_TOPIC=user-topic
 KAFKA_GROUP_ID=user-group
 
-
-
 SQLSERVER_HOST=localhost
 SQLSERVER_PORT=1433
 SQLSERVER_DB=api.python.db
 SQLSERVER_USER=sa
 SQLSERVER_PASSWORD=@Poc2Minimal@Api
+
+MONGO_LOG_CONN=mongodb://localhost:27017
+MONGO_LOG_DB=core_dev
+MONGO_LOG_COLLECTION=core_dev_logs
+
+
+GITHUB_USERNAME=gfmaurila
+GITHUB_API_URL=https://api.github.com
+GITHUB_TOKEN= # opcional, se quiser usar autenticação
+
+
