feat(python.template.api) jwt auth

--- a/src/core/env/.env.docker
+++ b/src/core/env/.env.docker
@@ -25,8 +25,24 @@ SECRET_KEY=segredo
 ISSUER=python-template
 AUDIENCE=public
 
+# MONGO LOG
+MONGO_LOG_CONN=mongodb://mongoserver:27017
+MONGO_LOG_DB=python_template_logs
+MONGO_LOG_COLLECTION=log_entries
 
-SQLSERVER_HOST=localhost
+# GITHUB
+GITHUB_USERNAME=gfmaurila
+GITHUB_API_URL=https://api.github.com/users/
+
+# JWT
+JWT_SECRET=cHJqc2xuYmFjay1ndWlsaGVybWVtYXVyaWxh
+ISSUER=JwtApiAuth
+AUDIENCE=JwtApiAuth
+JWT_ALGORITHM=HS256
+JWT_EXP_MINUTES=60
+
+# SQL SERVER
+SQLSERVER_HOST=host.docker.internal
 SQLSERVER_PORT=1433
 SQLSERVER_DB=api.python.db
 SQLSERVER_USER=sa
