--- a/src/core/env/.env.development
+++ b/src/core/env/.env.development
@@ -53,3 +53,10 @@ GITHUB_API_URL=https://api.github.com
 GITHUB_TOKEN= # opcional, se quiser usar autenticação
 
 
+ORACLE_HOST=localhost
+ORACLE_PORT=49161
+ORACLE_SID=xe
+ORACLE_USER=system
+ORACLE_PASSWORD=oracle
+
+
