feat(python.template.api) config oracle

--- a/src/core/env/.env.development
+++ b/src/core/env/.env.development
@@ -53,10 +53,25 @@ GITHUB_API_URL=https://api.github.com
 GITHUB_TOKEN= # opcional, se quiser usar autenticação
 
 
-ORACLE_HOST=localhost
-ORACLE_PORT=49161
-ORACLE_SID=xe
-ORACLE_USER=system
+# ORACLE_HOST=localhost
+# ORACLE_PORT=49161
+# ORACLE_SID=xe
+# ORACLE_USER=system
+# ORACLE_PASSWORD=oracle
+
+# ORACLE_HOST=localhost
+# ORACLE_PORT=1521
+# ORACLE_SID=xe
+# ORACLE_USER=system
+# ORACLE_PASSWORD=oracle
+
+# Oracle Config
+ORACLE_USER=hr
 ORACLE_PASSWORD=oracle
+ORACLE_HOST=localhost
+ORACLE_PORT=1521
+ORACLE_SID=xe
+ORACLE_CLIENT_LIB_DIR=F:\Work\python\oracle\instantclient_19_27\instantclient_19_27
+ORACLE_LIB_DIR=F:\Work\python\oracle\instantclient_19_27\instantclient_19_27
 
 
