--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,34 +87,74 @@ services:
   # using Oracle.ManagedDataAccess.Client;
   # "DefaultConnection": "User Id=system;Password=oracle;Data Source=//localhost:1521/xe;"
 
+  # oracle:
+  #   image: oracleinanutshell/oracle-xe-11g:latest
+  #   container_name: oracle
+  #   ports:
+  #     - "1521:1521"
+  #     - "5500:5500"
+  #   environment:
+  #     - ORACLE_ALLOW_REMOTE=true
+  #     - ORACLE_DISABLE_ASYNCH_IO=true
+  #     - ORACLE_USER=system
+  #     - ORACLE_PASSWORD=oracle
+  #     - ORACLE_DATABASE=xe
+  #   restart: always
+  #   networks:
+  #     - app-backend
+
+  # oracle-db:
+  #   image: oracleinanutshell/oracle-xe-11g
+  #   container_name: oracle_db
+  #   ports:
+  #     - "49161:1521"
+  #     - "8080:8080"
+  #   environment:
+  #     - ORACLE_ALLOW_REMOTE=true
+  #     - ORACLE_DISABLE_ASYNCH_IO=true
+  #   restart: always
+  #   networks:
+  #     - app-backend
+
+
+  # -----------------------------------------------------------------------
+  # https://hub.docker.com/r/gvenzl/oracle-xe
+
+  # Docker CLI:
+  # docker run -d -p 1521:1521 -e ORACLE_PASSWORD=oracle gvenzl/oracle-xe:18
+
+  # Acesso via DBeaver:
+  # Hostname: localhost
+  # Port: 1521
+  # Service Name: XEPDB1
+  # Username: system
+  # Password: oracle
+
+  # .NET Core
+  # "DefaultConnection": "User Id=system;Password=oracle;Data Source=localhost:1521/XEPDB1;"
+
   oracle:
-    image: oracleinanutshell/oracle-xe-11g:latest
+    image: gvenzl/oracle-xe:18
     container_name: oracle
     ports:
       - "1521:1521"
-      - "5500:5500"
     environment:
-      - ORACLE_ALLOW_REMOTE=true
-      - ORACLE_DISABLE_ASYNCH_IO=true
-      - ORACLE_USER=system
       - ORACLE_PASSWORD=oracle
-      - ORACLE_DATABASE=xe
+    restart: always
+    networks:
+      - app-backend
+  
+  oracle-db:
+    image: gvenzl/oracle-xe:18
+    container_name: oracle_db
+    ports:
+      - "49161:1521"  # Porta externa
+    environment:
+      - ORACLE_PASSWORD=oracle
     restart: always
     networks:
       - app-backend
 
-  oracle-db:
-    image: oracleinanutshell/oracle-xe-11g
-    container_name: oracle_db
-    ports:
-      - "49161:1521"
-      - "8080:8080"
-    environment:
-      - ORACLE_ALLOW_REMOTE=true
-      - ORACLE_DISABLE_ASYNCH_IO=true
-    restart: always
-    networks:
-      - app-backend
 
   # BEGIN MKT -------------------------------------------------------------- 
   mysql:
