feat(python.template.api) config mysql

--- a/src/core/env/.env.development
+++ b/src/core/env/.env.development
@@ -52,19 +52,6 @@ GITHUB_USERNAME=gfmaurila
 GITHUB_API_URL=https://api.github.com
 GITHUB_TOKEN= # opcional, se quiser usar autenticação
 
-
-# ORACLE_HOST=localhost
-# ORACLE_PORT=49161
-# ORACLE_SID=xe
-# ORACLE_USER=system
-# ORACLE_PASSWORD=oracle
-
-# ORACLE_HOST=localhost
-# ORACLE_PORT=1521
-# ORACLE_SID=xe
-# ORACLE_USER=system
-# ORACLE_PASSWORD=oracle
-
 # Oracle Config
 ORACLE_USER=hr
 ORACLE_PASSWORD=oracle
@@ -74,4 +61,11 @@ ORACLE_SID=xe
 ORACLE_CLIENT_LIB_DIR=F:\Work\python\oracle\instantclient_19_27\instantclient_19_27
 ORACLE_LIB_DIR=F:\Work\python\oracle\instantclient_19_27\instantclient_19_27
 
+
+# MySQL Configuration
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_DATABASE=Teste
+MYSQL_USER=admin
+MYSQL_PASSWORD=Poc2Minimal@Api
 
