--- a/src/core/env/.env.docker
+++ b/src/core/env/.env.docker
@@ -3,6 +3,9 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD=Poc2Minimal@Api
+REDIS_DB_USER=1
+REDIS_DB_USER_DELETE=2
+REDIS_DB_AUTH=4
 
 # RABBITMQ
 RABBITMQ_HOST=rabbitmq
@@ -11,6 +14,11 @@ RABBITMQ_USER=guest
 RABBITMQ_PASSWORD=guest
 RABBITMQ_EXCHANGE=user-exchange
 RABBITMQ_QUEUE=user-created-queue
+RABBITMQ_EXCHANGE_USER=user-exchange
+RABBITMQ_QUEUE_USER=user-created-queue
+RABBITMQ_EXCHANGE_PERSON=person-exchange
+RABBITMQ_QUEUE_PERSON=person-created-queue
+
 
 # KAFKA
 KAFKA_BOOTSTRAP_SERVERS=kafka1:9092
@@ -33,6 +41,7 @@ MONGO_LOG_COLLECTION=log_entries
 # GITHUB
 GITHUB_USERNAME=gfmaurila
 GITHUB_API_URL=https://api.github.com/users/
+GITHUB_TOKEN=
 
 # JWT
 JWT_SECRET=cHJqc2xuYmFjay1ndWlsaGVybWVtYXVyaWxh
@@ -47,3 +56,19 @@ SQLSERVER_PORT=1433
 SQLSERVER_DB=api.python.db
 SQLSERVER_USER=sa
 SQLSERVER_PASSWORD=@Poc2Minimal@Api
+
+# ORACLE
+ORACLE_HOST=oracle
+ORACLE_PORT=1521
+ORACLE_SID=XE
+ORACLE_USER=system
+ORACLE_PASSWORD=oracle
+ORACLE_CLIENT_LIB_DIR=/opt/oracle/instantclient
+ORACLE_LIB_DIR=/opt/oracle/lib
+
+# MYSQL
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_DATABASE=template_db
+MYSQL_USER=root
+MYSQL_PASSWORD=root
